--- a/src/app/privado/reserva/calendario/calendario.component.html
+++ b/src/app/privado/reserva/calendario/calendario.component.html
@@ -107,7 +107,7 @@
                 data-toggle="tooltip"
                 [attr.title]="getToolTip('O', habitacion, dia.day + 1)"
               >
-                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                <i class="far fa-circle"></i>
               </a>
             </div>
           </td>
