--- a/src/app/compartido/components/header/header.component.html
+++ b/src/app/compartido/components/header/header.component.html
@@ -1,7 +1,5 @@
 <nav class="navbar navbar-expand-md bg-light">
-  <a class="navbar-brand" [routerLink]="['/']">
-    <img src="/assets/images/brand.svg" width="60" alt="" /> Chaskiy
-  </a>
+  <a class="navbar-brand" [routerLink]="['/']"> <img src="/assets/images/brand.svg" width="60" alt="" /> Chaskiy </a>
   <button
     class="navbar-toggler collapsed "
     type="button"
@@ -24,22 +22,14 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-md-0">
-      <a class="btn btn-outline-primary" [routerLink]="['/login']"
-        >Iniciar sesión</a
-      >
+      <a class="btn btn-outline-primary" [routerLink]="['/login']">Iniciar sesión</a>
     </form>
   </div>
   <!-- SESSION -->
   <div *ngIf="chasker" class="navbar-collapse collapse" id="navContent">
     <ul class="navbar-nav mr-auto">
-      <li
-        class="nav-item active"
-        *ngFor="let route of chasker.routes"
-        [hidden]="route.hidden === true"
-      >
-        <a class="nav-link" [routerLink]="['/' + route.route]">{{
-          route.text
-        }}</a>
+      <li class="nav-item active" *ngFor="let route of chasker.routes" [hidden]="route.hidden === true">
+        <a class="nav-link" [routerLink]="['/' + route.route]">{{ route.text }}</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-md-0">
@@ -61,7 +51,7 @@
           </a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" [routerLink]="" (click)="logOut()">
-            Cerrar sesión <i class="fa fa-sign-out" aria-hidden="true"></i>
+            Cerrar sesión <i class="fas fa-sign-out-alt"></i>
           </a>
         </div>
       </div>
