--- a/src/app/privado/galeria/galeria.component.html
+++ b/src/app/privado/galeria/galeria.component.html
@@ -2,8 +2,8 @@
 <br />
 <div class="container">
   <h2>
-    Tarifas
-    <small>({{ tarifas.length }})</small>
+    Galería
+    <small>({{ images.length }})</small>
   </h2>
   <hr class="my-2" />
 </div>
@@ -25,9 +25,9 @@
           <button
             type="button"
             class="btn btn-primary add pull-right"
-            (click)="setNuevo()"
+            (click)="showModal()"
             data-toggle="modal"
-            data-target="#tarifaModal"
+            data-target="#adicionalModal"
           >
             <i class="fa fa-plus" aria-hidden="true"></i>
             Nuevo
@@ -36,34 +36,32 @@
       </div>
       <div class="card">
         <div class="card-body">
-          <table class="table table-striped table-responsive">
+          <table class="table table-striped">
             <thead>
               <tr>
-                <th width="20%">Tipo</th>
-                <th width="40%">Tarifa</th>
-                <th width="30%">Valor</th>
+                <th width="60%">Adicional</th>
+                <th width="30%">Tarifa</th>
                 <th width="10%">Editar/Eliminar</th>
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let tarifa of (tarifas | filtrar: 'tipoTarifa,tarifa,valor':filtro)">
-                <td width="20%">{{ tarifa.tipoTarifa }}</td>
-                <td width="40%">{{ tarifa.tarifa }}</td>
-                <td width="30%">{{ tarifa.valor | currency: 'USD' }}</td>
+              <tr *ngFor="let images of (images | filtrar: 'adicional,tarifa':filtro)">
+                <td width="60%">{{ add.adicional }}</td>
+                <td width="30%">{{ add.tarifa | currency: 'USD' }}</td>
                 <td width="10%" class="text-center">
                   <div class="btn-group grid-btn" role="group">
                     <button
                       type="button"
-                      (click)="setModi(tarifa)"
+                      (click)="setModi(add)"
                       class="btn btn-link text-primary"
                       data-toggle="modal"
-                      data-target="#tarifaModal"
+                      data-target="#adicionalModal"
                     >
                       <i class="fas fa-pencil-alt"></i>
                     </button>
                     <button
                       type="button"
-                      (click)="setDelete(tarifa)"
+                      (click)="setDelete(add)"
                       class="btn btn-link text-danger"
                       data-toggle="modal"
                       data-target="#confirmaModal"
@@ -73,14 +71,14 @@
                   </div>
                 </td>
               </tr>
-              <tr *ngIf="loading_tar">
-                <td colspan="4">
+              <tr *ngIf="loadingImages">
+                <td colspan="3">
                   <app-spinner></app-spinner>
                 </td>
               </tr>
-              <tr *ngIf="!loading_tar && tarifas.length === 0">
-                <td class="text-center" colspan="4">
-                  <p class="text-muted">No existen tarifas registradas</p>
+              <tr *ngIf="!loadingImages && images.length === 0">
+                <td class="text-center" colspan="3">
+                  <p class="text-muted">No existen adicionales</p>
                 </td>
               </tr>
             </tbody>
@@ -93,15 +91,12 @@
         <div class="card-body">
           <h4 class="card-title">Ayuda</h4>
           <p class="card-text">
-            Registra, edita o elimina las tarifas que manejas en tu hospedaje. Las tarifas se asignan a las habitaciones
-            al memomento de hacer una reserva y suman a la cuenta final dependiendo los días que se ocupe la habitación.
-            <br />
-            <br />
-            Entre los tipos de tarifas que puedes registrar estan:
+            Registra, edita o elimina los servicios adicionales que manejas en tu hospedaje. Los adicionales se pueden
+            registrar al momento de hacer una reserva y/o mientras no se haya hecho el proceso de check-out.
           </p>
-          <ul>
-            <li *ngFor="let op of tipos">{{ op.tipoTarifa }}</li>
-          </ul>
+          <!-- <ul>
+						<li *ngFor="let op of tipos">{{op.tipotarifa}}</li>
+					</ul> -->
         </div>
       </div>
 
@@ -111,19 +106,19 @@
     </div>
   </div>
 </div>
-<!-- MODAL TARIFA -->
-<div *ngIf="model" class="modal fade" id="tarifaModal">
+<!-- MODAL ADICIONAL -->
+<div *ngIf="model" class="modal fade" id="adicionalModal">
   <div class="modal-dialog modal-md" role="document">
     <div class="modal-content">
       <div class="modal-header bg-primary text-light">
-        <h5 class="modal-title">Tarifa</h5>
+        <h5 class="modal-title">Adicional</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
         <form
-          id="formTarifa"
+          id="formAdicional"
           name="form"
           class="col-md-12"
           (ngSubmit)="f.form.valid && guardar(f)"
@@ -132,47 +127,40 @@
           novalidate
         >
           <div class="form-row">
-            <div class="form-group col-sm-12 col-md-4">
-              <label for="tipo">Tipo</label>
-              <select class="form-control" name="tipo" [(ngModel)]="model.idTipo" #tipo="ngModel" required>
-                <option *ngFor="let op of tipos" [value]="op.idTipo">{{ op.tipoTarifa }}</option>
-              </select>
-              <div *ngIf="f.submitted && !tipo.valid" class="invalid-feedback">El tipo de tarifa es requerido</div>
+            <div class="form-group col-sm-12 col-md-8">
+              <label for="adicional">Nombre</label>
+              <input
+                type="text"
+                class="form-control"
+                name="adicional"
+                [(ngModel)]="model.adicional"
+                #adicional="ngModel"
+                maxlength="100"
+                required
+              />
+              <div *ngIf="f.submitted && !adicional.valid" class="invalid-feedback">
+                El nombre del servicio adicional es requerido
+              </div>
             </div>
-            <div class="form-group col-sm-12 col-md-6">
+            <div class="form-group col-sm-12 col-md-4">
               <label for="tarifa">Tarifa</label>
               <input
                 type="text"
                 class="form-control"
                 name="tarifa"
                 [(ngModel)]="model.tarifa"
-                #tarifa="ngModel"
-                maxlength="100"
-                required
-              />
-              <div *ngIf="f.submitted && !tarifa.valid" class="invalid-feedback">
-                El nombre de la tarifa es requrida
-              </div>
-            </div>
-            <div class="form-group col-sm-12 col-md-2">
-              <label for="valor">Valor</label>
-              <input
-                type="text"
-                class="form-control"
-                name="valor"
-                [(ngModel)]="model.valor"
-                #valor="ngModel"
+                #adicional="ngModel"
                 appMoneda="true"
                 required
               />
-              <div *ngIf="f.submitted && !valor.valid" class="invalid-feedback">El valor de la tarifa es requerido</div>
+              <div *ngIf="f.submitted && !adicional.valid" class="invalid-feedback">La tarifa es requerida</div>
             </div>
           </div>
         </form>
       </div>
       <div class="modal-footer">
         <img *ngIf="loading" src="/assets/images/loading.svg" />
-        <button *ngIf="!loading" type="submit" class="btn btn-primary" form="formTarifa">Guardar</button>
+        <button *ngIf="!loading" type="submit" class="btn btn-primary" form="formAdicional">Guardar</button>
         <button *ngIf="!loading" type="button" class="btn btn-light" data-dismiss="modal">Cancelar</button>
       </div>
     </div>
@@ -184,3 +172,5 @@
   (confirmar)="delete()"
   (cancelar)="onCancelar()"
 ></app-modal-confirmacion>
+
+<app-subir-modal></app-subir-modal>
