--- a/src/app/privado/pasajero/pasajero.component.html
+++ b/src/app/privado/pasajero/pasajero.component.html
@@ -1,10 +1,11 @@
-<br>
-<br>
+<br />
+<br />
 <div class="container">
-  <h2>Pasajeros
-    <small>({{pasajeros.length}})</small>
+  <h2>
+    Pasajeros
+    <small>({{ pasajeros.length }})</small>
   </h2>
-  <hr class="my-2">
+  <hr class="my-2" />
 </div>
 <div class="container">
   <div class="row">
@@ -21,7 +22,13 @@
           </div>
         </div>
         <div class="col-sm-8">
-          <button type="button" class="btn btn-primary add pull-right" (click)="setNuevo()" data-toggle="modal" data-target="#pasajeroModal">
+          <button
+            type="button"
+            class="btn btn-primary add pull-right"
+            (click)="setNuevo()"
+            data-toggle="modal"
+            data-target="#pasajeroModal"
+          >
             <i class="fa fa-plus" aria-hidden="true"></i>
             Nuevo
           </button>
@@ -40,16 +47,28 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let pasajero of pasajeros | filtrar:'correo,nombre,noContacto,pais':filtro;">
-                <td>{{pasajero.correo}}</td>
-                <td>{{pasajero.nombre}}</td>
-                <td>{{pasajero.noContacto}}</td>
-                <td>{{pasajero.pais}}</td>
+              <tr *ngFor="let pasajero of (pasajeros | filtrar: 'correo,nombre,noContacto,pais':filtro)">
+                <td>{{ pasajero.correo }}</td>
+                <td>{{ pasajero.nombre }}</td>
+                <td>{{ pasajero.noContacto }}</td>
+                <td>{{ pasajero.pais }}</td>
                 <td class="text-center">
-                  <button type="button" (click)="setModi(pasajero)" class="btn btn-link" data-toggle="modal" data-target="#pasajeroModal">
-                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                  <button
+                    type="button"
+                    (click)="setModi(pasajero)"
+                    class="btn btn-link"
+                    data-toggle="modal"
+                    data-target="#pasajeroModal"
+                  >
+                    <i class="fas fa-pencil-alt"></i>
                   </button>
-                  <button type="button" (click)="setDelete(pasajero)" class="btn btn-link text-danger" data-toggle="modal" data-target="#confirmaModal">
+                  <button
+                    type="button"
+                    (click)="setDelete(pasajero)"
+                    class="btn btn-link text-danger"
+                    data-toggle="modal"
+                    data-target="#confirmaModal"
+                  >
                     <i class="fa fa-trash" aria-hidden="true"></i>
                   </button>
                   <!-- <div class="btn-group grid-btn" role="group">
@@ -62,7 +81,7 @@
                   <app-spinner></app-spinner>
                 </td>
               </tr>
-              <tr *ngIf="!loading_pas && pasajeros.length===0">
+              <tr *ngIf="!loading_pas && pasajeros.length === 0">
                 <td class="text-center" colspan="5">
                   <p class="text-muted">No existen pasajeros registrados</p>
                 </td>
@@ -73,13 +92,12 @@
       </div>
     </div>
     <div class="col-lg-3 col-md-2 col-sm-12" id="sidebar">
-
       <div class="card mt-2">
         <div class="card-body">
           <h4 class="card-title">Ayuda</h4>
           <p class="card-text">
-            Registra, edita o elimina los pasajeros de tu hospedaje. Los pasajeros que registres aquí los podrás asignar a las reservas
-            buscándolos con su correo electrónico.
+            Registra, edita o elimina los pasajeros de tu hospedaje. Los pasajeros que registres aquí los podrás asignar
+            a las reservas buscándolos con su correo electrónico.
           </p>
         </div>
       </div>
@@ -100,44 +118,73 @@
         </button>
       </div>
       <div class="modal-body">
-        <form id="formPasajero" name="form" class="col-sm-12" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" [ngClass]="{ 'was-validated': f.submitted }"
-          novalidate>
+        <form
+          id="formPasajero"
+          name="form"
+          class="col-sm-12"
+          (ngSubmit)="f.form.valid && guardar(f)"
+          #f="ngForm"
+          [ngClass]="{ 'was-validated': f.submitted }"
+          novalidate
+        >
           <div class="form-group">
             <label for="correo">Correo electrónico</label>
             <div class="input-group">
-              <input type="email" class="form-control" name="correo" [(ngModel)]="model.correo" #correo="ngModel" [email]="true"
-                required/>
+              <input
+                type="email"
+                class="form-control"
+                name="correo"
+                [(ngModel)]="model.correo"
+                #correo="ngModel"
+                [email]="true"
+                required
+              />
             </div>
             <div *ngIf="f.submitted && !correo.valid" class="invalid-feedback">Ingrese un electrónico válido</div>
           </div>
           <div class="form-group">
             <label for="pasajero">Nombre</label>
-            <input type="text" class="form-control" name="pasajero" [(ngModel)]="model.pasajero" #pasajero="ngModel" maxlength="100"
-              required />
+            <input
+              type="text"
+              class="form-control"
+              name="pasajero"
+              [(ngModel)]="model.pasajero"
+              #pasajero="ngModel"
+              maxlength="100"
+              required
+            />
             <div *ngIf="f.submitted && !pasajero.valid" class="invalid-feedback">El nombre es requerido</div>
           </div>
           <div class="form-group">
             <label for="pais">País</label>
             <select id="pais" name="pais" class="form-control" style="width: 100%">
-              <option *ngFor="let pais of paises" [value]="pais.id">{{pais.text}}</option>
+              <option *ngFor="let pais of paises" [value]="pais.id">{{ pais.text }}</option>
             </select>
           </div>
           <div class="form-group">
             <label for="noContacto">Número de contacto</label>
-            <input type="text" class="form-control" name="noContacto" [(ngModel)]="model.noContacto" #noContacto="ngModel" maxlength="15"
+            <input
+              type="text"
+              class="form-control"
+              name="noContacto"
+              [(ngModel)]="model.noContacto"
+              #noContacto="ngModel"
+              maxlength="15"
             />
           </div>
-
         </form>
       </div>
       <div class="modal-footer">
         <img *ngIf="loading" src="/assets/images/loading.svg" />
-        <button *ngIf="!loading" type="submit" class="btn btn-primary" form="formPasajero">Guardar
-        </button>
+        <button *ngIf="!loading" type="submit" class="btn btn-primary" form="formPasajero">Guardar</button>
         <button *ngIf="!loading" type="button" class="btn btn-light" data-dismiss="modal">Cancelar</button>
       </div>
     </div>
   </div>
 </div>
 
-<app-modal-confirmacion [mensaje]="mensajeConfirmacion" (confirmar)="delete()" (cancelar)="onCancelar()"></app-modal-confirmacion>
+<app-modal-confirmacion
+  [mensaje]="mensajeConfirmacion"
+  (confirmar)="delete()"
+  (cancelar)="onCancelar()"
+></app-modal-confirmacion>
