new feature, galeria

--- a/src/app/compartido/components/modal/modal.component.html
+++ b/src/app/compartido/components/modal/modal.component.html
@@ -7,7 +7,7 @@
   aria-labelledby="exampleModalLabel"
   aria-hidden="true"
 >
-  <div class="modal-dialog" role="document">
+  <div [class]="'modal-dialog ' + (_type || '')" role="document">
     <div class="modal-content">
       <div class="modal-header bg-primary text-light">
         <h5 class="modal-title" id="exampleModalLabel">{{ _title }}</h5>
@@ -20,10 +20,11 @@
       </div> -->
       <ng-content></ng-content>
       <div class="modal-footer">
-        <button type="button" class="btn btn-light" data-dismiss="modal">
+        <img *ngIf="_loading" src="/assets/images/loading.svg" />
+        <button *ngIf="!_loading" type="button" class="btn btn-light" data-dismiss="modal">
           {{ _cancelarText || 'Cerrar' }}
         </button>
-        <button type="submit" [attr.form]="_idForm" (click)="submit()" class="btn btn-primary">
+        <button *ngIf="!_loading" type="submit" [attr.form]="_idForm" (click)="submit()" class="btn btn-primary">
           {{ _aceptarText || 'Guardar' }}
         </button>
       </div>
