--- a/src/app/compartido/components/card/card.component.html
+++ b/src/app/compartido/components/card/card.component.html
@@ -1,6 +1,8 @@
 <div class="card">
   <img *ngIf="image" [src]="image" class="card-img-top" />
-  <ng-content></ng-content>
+  <div class="card-body">
+    <ng-content></ng-content>
+  </div>
   <!-- <div class="card-footer">
     2 days ago
   </div> -->
