--- a/src/app/compartido/components/p-text-area/p-text-area.component.html
+++ b/src/app/compartido/components/p-text-area/p-text-area.component.html
@@ -5,25 +5,13 @@
   </a>
 </p>
 <div *ngIf="esModificar" class="row mx-auto">
-  <textarea
-    class="form-control col-9"
-    rows="3"
-    [(ngModel)]="text"
-    maxlength="600"
-    >{{ text }}</textarea
-  >
-  <button
-    type="button"
-    class="btn btn-link text-primary px-0 col-1 mb-auto"
-    (click)="_modificar()"
-  >
+  <textarea name="_inputName" class="form-control col-9" rows="3" [(ngModel)]="text" maxlength="600">{{
+    text
+  }}</textarea>
+  <button type="button" class="btn btn-link text-primary px-0 col-1 mb-auto" (click)="_modificar()">
     <i class="fa fa-check" aria-hidden="true"></i>
   </button>
-  <button
-    type="button"
-    class="btn btn-link text-danger px-0 col-1 mb-auto"
-    (click)="cancelar()"
-  >
+  <button type="button" class="btn btn-link text-danger px-0 col-1 mb-auto" (click)="cancelar()">
     <i class="fa fa-times" aria-hidden="true"></i>
   </button>
 </div>
