--- a/src/app/publico/index/index.component.html
+++ b/src/app/publico/index/index.component.html
@@ -1,96 +1,106 @@
 <section class="cuadro-img">
-	<div class="container-fluid">		
-		<div class="row">
-			<div class="col-md-3 col-sm-12">
-			</div>
-			<div class="col-md-9 col-sm-12">
-				<br>
-				<div class="jumbotron">
-					<h1 class="display-6 text-primary">La solución que se ajusta a tu pequeño GRAN HOSPEDAJE</h1>
-					<p class="lead">Encuentra en esta herramienta todo lo que necesitas para administrar tu HOSPEDAJE como un gran hotelero.</p>
-					<hr class="my-4">
-					<a class="btn btn-info btn-lg mx-2" href="#" role="button">Prueba gratis</a>
-					<a class="btn btn-outline-primary btn-lg mx-2" href="#" role="button">Inicia sesión</a>
-				</div>
-			</div>
-		</div>
-	</div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-3 col-sm-12"></div>
+      <div class="col-md-9 col-sm-12">
+        <br />
+        <div class="jumbotron">
+          <h1 class="display-6 text-primary">La solución que se ajusta a tu pequeño GRAN HOSPEDAJE</h1>
+          <p class="lead">
+            Encuentra en esta herramienta todo lo que necesitas para administrar tu HOSPEDAJE como un gran hotelero.
+          </p>
+          <hr class="my-4" />
+          <a class="btn btn-info btn-lg mx-2" href="#" role="button">Prueba gratis</a>
+          <a class="btn btn-outline-primary btn-lg mx-2" href="#" role="button">Inicia sesión</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 <section class="caracteristicas">
-	<br>
-	<div class="container-fluid">
-		<div class="containter">
-			<div class="row">
-				<h2 class="mx-auto my-3 text-muted">Mantén todo organizado</h2>
-			</div>
-			<div class="row">
-				<h4 class="mx-auto my-3 text-center">Deja de apuntar todo en tu agenda, y saca provecho de lo que te ofrecemos</h4>
-			</div>
-			<div class="row">
-				<div class="col-sm-12 col-md-4 mb-2 text-center">
-					<div class="card">
-						<h1 class="display-1 text-primary">
-							<i class="fa fa-bed" aria-hidden="true"></i>
-						</h1>
-						<div class="card-body">
-							<h5 class="card-title">Habitaciones</h5>
-							<p>Registra tus habitaciones y controla la disponibilidad, llegadas, estancias y salidas de tus pasajeros sin perderte ningún
-								detalle</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-12 col-md-4 mb-2 text-center">
-					<div class="card">
-						<h1 class="display-1 text-primary">
-							<i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-						</h1>
-						<div class="card-body">
-							<h5 class="card-title">Correo electrónico</h5>
-							<p>Envía a través de Chaskiy cotizaciones o confirmaciones de hospedaje a tus pasajeros para que no pierdan de vista sus reservas</p>
-						</div>
-					</div>										
-				</div>
-				<div class="col-sm-12 col-md-4 mb-2 text-center">
-					<div class="card">
-						<h1 class="display-1 text-primary">
-							<i class="fa fa-money" aria-hidden="true"></i>
-						</h1>
-						<div class="card-body">
-							<h5 class="card-title">Pagos</h5>
-							<p>Registra los pagos de cada reserva para llevar el óptimo control de los ingresos que genera tu hospedaje</p>
-						</div>
-					</div>					
-				</div>
-			</div>
-			<div class="row my-3">
-				<a class="btn btn-primary btn-lg mx-auto" href="#" role="button">Conoce más</a>
-			</div>
-		</div>
-	</div>
-	<br>
+  <br />
+  <div class="container-fluid">
+    <div class="containter">
+      <div class="row">
+        <h2 class="mx-auto my-3 text-muted">Mantén todo organizado</h2>
+      </div>
+      <div class="row">
+        <h4 class="mx-auto my-3 text-center">
+          Deja de apuntar todo en tu agenda, y saca provecho de lo que te ofrecemos
+        </h4>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-4 mb-2 text-center">
+          <div class="card">
+            <h1 class="display-1 text-primary">
+              <i class="fa fa-bed" aria-hidden="true"></i>
+            </h1>
+            <div class="card-body">
+              <h5 class="card-title">Habitaciones</h5>
+              <p>
+                Registra tus habitaciones y controla la disponibilidad, llegadas, estancias y salidas de tus pasajeros
+                sin perderte ningún detalle
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4 mb-2 text-center">
+          <div class="card">
+            <h1 class="display-1 text-primary">
+              <i class="far fa-envelope"></i>
+            </h1>
+            <div class="card-body">
+              <h5 class="card-title">Correo electrónico</h5>
+              <p>
+                Envía a través de Chaskiy cotizaciones o confirmaciones de hospedaje a tus pasajeros para que no pierdan
+                de vista sus reservas
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4 mb-2 text-center">
+          <div class="card">
+            <h1 class="display-1 text-primary">
+              <i class="fa fa-money" aria-hidden="true"></i>
+            </h1>
+            <div class="card-body">
+              <h5 class="card-title">Pagos</h5>
+              <p>
+                Registra los pagos de cada reserva para llevar el óptimo control de los ingresos que genera tu hospedaje
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row my-3">
+        <a class="btn btn-primary btn-lg mx-auto" href="#" role="button">Conoce más</a>
+      </div>
+    </div>
+  </div>
+  <br />
 </section>
 <section class="clientes">
-	<br>
-	<div class="row">
-		<h3 class="ml-auto mr-auto text-muted">Conoce nuestros clientes</h3>
-	</div>
-	<div class="row clientes">
-		<div class="col-4 text-center">
-			<a target="_blank" href="https://www.casadcristhi.com/">
-				<img src="https://via.placeholder.com/150x150?text=Tu%20marca%20aqui" height="150px" width="150px">
-			</a>
-		</div>
-		<div class="col-4 text-center">
-			<a target="_blank" href="https://www.casadcristhi.com/">
-				<img src="assets/images/dcristhi_300x300.png" height="150px" width="150px">
-			</a>
-		</div>
-		<div class="col-4 text-center">
-			<a target="_blank" href="https://www.casadcristhi.com/">
-				<img src="https://via.placeholder.com/150x150?text=Tu%20marca%20aqui" height="150px" width="150px">
-			</a>
-		</div>
-	</div>
-	<br>
-	<br>
+  <br />
+  <div class="row mx-0">
+    <h3 class="ml-auto mr-auto text-muted">Conoce nuestros clientes</h3>
+  </div>
+  <div class="row clientes mx-0">
+    <div class="col-4 text-center">
+      <a target="_blank" href="https://www.casadcristhi.com/">
+        <img src="https://via.placeholder.com/150x150?text=Tu%20marca%20aqui" height="150px" width="150px" />
+      </a>
+    </div>
+    <div class="col-4 text-center">
+      <a target="_blank" href="https://www.casadcristhi.com/">
+        <img src="assets/images/dcristhi_300x300.png" height="150px" width="150px" />
+      </a>
+    </div>
+    <div class="col-4 text-center">
+      <a target="_blank" href="https://www.casadcristhi.com/">
+        <img src="https://via.placeholder.com/150x150?text=Tu%20marca%20aqui" height="150px" width="150px" />
+      </a>
+    </div>
+  </div>
+  <br />
+  <br />
 </section>
