--- a/src/app/compartido/components/card/card.component.html
+++ b/src/app/compartido/components/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <img *ngIf="image" [src]="image" class="card-img-top" />
+  <img *ngIf="_image" [src]="_image" class="card-img-top" />
   <div class="card-body">
     <ng-content></ng-content>
   </div>
